@@ -31,14 +31,16 @@
 // $--GSV,x,x,xx,xx,xx,xxx,xx......,xx,xx,xxx,xx*hh<cr><lf>
 //
 
-#define GSV_MAX_SATELLITES		36
+#define GSV_MAX_SATELLITES_PER_MESSAGE	4
+#define GSV_MAX_SATELLITES				(9 * GSV_MAX_SATELLITES_PER_MESSAGE)
+
 //
 // Holds satellite information for one satellite
 //
 struct navi_satinfo_t
 {
 	unsigned int vfields;	// valid fields, bitwise or of SATINFO_VALID_xxx
-	unsigned int id;		// satellite ID number
+	unsigned int id;		// satellite ID number (if id == 0, the structure is empty)
 	unsigned int elevation;	// degrees 00-90
 	unsigned int azimuth;	// degrees true, 000-359
 	unsigned int snr;		// signal-to-noise ratio, 00-99 dB-Hz, null if not tracking
@@ -50,13 +52,17 @@ struct navi_satinfo_t
 struct gsv_t
 {
 	navi_talkerid_t tid;	// talker id
-	int nmsatellites;		// total number of satellites in view
-	struct navi_satinfo_t info[GSV_MAX_SATELLITES];	// satellite info array
-	int totalnm;	// total number of messages (filled during parsing)
-	int msgnm;		// number of received message
+	int totalnm;		// total number of messages
+	int msgnm;			// number of received message
+	int nmsatellites;	// total number of satellites in view, -1 if null
+
+	// satellite info array
+	struct navi_satinfo_t info[GSV_MAX_SATELLITES_PER_MESSAGE];
 };
 
 NAVI_BEGIN_DECL
+
+#ifndef NO_GENERATOR
 
 //
 // Initializes GSV sentence structure with default values
@@ -68,8 +74,19 @@ NAVI_EXTERN(navierr_status_t) navi_create_gsv(const struct gsv_t *msg, char *buf
 	size_t maxsize, size_t *nmwritten);
 
 //
+// Creates GSV message sequence from satellites array
+NAVI_EXTERN(navierr_status_t) navi_create_gsv_sequence(navi_talkerid_t tid, int nmofsatellites,
+	const struct navi_satinfo_t satlist[], char *buffer, size_t maxsize, size_t *nmwritten);
+
+#endif // NO_GENERATOR
+
+#ifndef NO_PARSER
+
+//
 // Parses GSV message
 NAVI_EXTERN(navierr_status_t) navi_parse_gsv(struct gsv_t *msg, char *buffer);
+
+#endif // NO_PARSER
 
 NAVI_END_DECL
 
