@@ -37,9 +37,10 @@ navierr_status_t navi_init_gsv(struct gsv_t *msg, navi_talkerid_t tid)
 	assert(msg != NULL);
 
 	msg->tid = tid;
-	msg->nmsatellites = 0;
+	msg->totalnm = 1;
+	msg->msgnm = 1;
+	msg->nmsatellites = -1;
 	memset(msg->info, 0, sizeof(msg->info));
-	msg->totalnm = msg->msgnm = 1;
 
 	return navi_Ok;
 }
@@ -50,149 +51,109 @@ navierr_status_t navi_init_gsv(struct gsv_t *msg, navi_talkerid_t tid)
 // Creates GSV message
 navierr_status_t navi_create_gsv(const struct gsv_t *msg, char *buffer, size_t maxsize, size_t *nmwritten)
 {
-	int i, j, nmoffullmsg;
-	size_t msglength, total = 0;
-	const char *tid = NULL, *sfmt = NULL;
-	char csstr[3];
+	int i;
+	size_t msglength;
 
-	char totalnm[2], msgnm[2], nmsatellites[4], id[4][4], elevation[4][4],
-		azimuth[4][4], snr[4][4];
+	char totalnm[2], msgnm[2], nmsatellites[4], id[4], elevation[4], azimuth[4], snr[4];
 	char bytes[4];
 
-	tid = navi_talkerid_str(msg->tid);
-	sfmt = navi_sentencefmt_str(navi_GSV);
+	(void)navi_split_integer(msg->totalnm, bytes, 1, 10);
+	msglength = navi_print_decfield(bytes, 1, totalnm, sizeof(totalnm));
 
-	nmoffullmsg = msg->nmsatellites / 4;
+	(void)navi_split_integer(msg->msgnm, bytes, 1, 10);
+	msglength += navi_print_decfield(bytes, 1, msgnm, sizeof(msgnm));
 
-	if (msg->nmsatellites % 4)
-		(void)navi_split_integer(nmoffullmsg + 1, bytes, 1, 10);
+	if (msg->nmsatellites != -1)
+	{
+		(void)navi_split_integer(msg->nmsatellites, bytes, 2, 10);
+		msglength += navi_print_decfield(bytes, 2, nmsatellites, sizeof(nmsatellites));
+	}
 	else
-		(void)navi_split_integer(nmoffullmsg, bytes, 1, 10);
-	(void)navi_print_decfield(bytes, 1, totalnm, sizeof(totalnm));
-
-	(void)navi_split_integer(msg->nmsatellites, bytes, 2, 10);
-	(void)navi_print_decfield(bytes, 2, nmsatellites, sizeof(nmsatellites));
-
-	for (i = 0; i < nmoffullmsg; i++)
-	{	// compose all the messages, where all four satellites are used
-		msglength = strlen(totalnm);
-		msglength += strlen(nmsatellites);
-
-		(void)navi_split_integer(i + 1, bytes, 1, 10);
-		msglength += navi_print_decfield(bytes, 1, msgnm, sizeof(msgnm));
-
-		for (j = 0; j < 4; j++)
-		{
-			(void)navi_split_integer(msg->info[i * 4 + j].id, bytes, 2, 10);
-			msglength += navi_print_decfield(bytes, 2, id[j], sizeof(id[0]));
-
-			(void)navi_split_integer(msg->info[i * 4 + j].elevation, bytes, 2, 10);
-			msglength += navi_print_decfield(bytes,
-				msg->info[i * 4 + j].vfields & SATINFO_VALID_ORIENTATION ? 2 : 0,
-				elevation[j], sizeof(elevation[0]));
-
-			(void)navi_split_integer(msg->info[i * 4 + j].azimuth, bytes, 3, 10);
-			msglength += navi_print_decfield(bytes,
-				msg->info[i * 4 + j].vfields & SATINFO_VALID_ORIENTATION ? 3 : 0,
-				azimuth[j], sizeof(azimuth[0]));
-
-			(void)navi_split_integer(msg->info[i * 4 + j].snr, bytes, 2, 10);
-			msglength += navi_print_decfield(bytes,
-				msg->info[i * 4 + j].vfields & SATINFO_VALID_SNR ? 2 : 0,
-				snr[j], sizeof(snr[0]));
-		}
-
-		if (msglength + 30 > NAVI_SENTENCE_MAXSIZE)
-		{
-			navierr_set_last(navi_MsgExceedsMaxSize);
-			return navi_Error;
-		}
-
-		msglength = snprintf(buffer + total, maxsize - total,
-			"$%s%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s,%s*",
-			tid, sfmt, totalnm, msgnm, nmsatellites, id[0], elevation[0], azimuth[0],
-			snr[0], id[1], elevation[1], azimuth[1], snr[1], id[2], elevation[2],
-			azimuth[2], snr[2], id[3], elevation[3], azimuth[3], snr[3]);
-
-		if (navi_checksum(buffer + total, msglength, csstr, NULL) != navi_Ok)
-			return navi_Error;
-		strcat(buffer, csstr);
-		strcat(buffer, "\r\n");
-		total = total + msglength + 4;
+	{
+		strcpy(nmsatellites, "");
 	}
 
-	if (msg->nmsatellites % 4)
-	{	// compose the last message
-		msglength = strlen(totalnm);
-		msglength += strlen(nmsatellites);
+	strcpy(buffer, totalnm);
+	strcat(buffer, ",");
+	strcat(buffer, msgnm);
+	strcat(buffer, ",");
+	strcat(buffer, nmsatellites);
 
-		(void)navi_split_integer(i + 1, bytes, 1, 10);
-		msglength += navi_print_decfield(bytes, 1, msgnm, sizeof(msgnm));
-
-		strcat(buffer, "$");
-		strcat(buffer, tid);
-		strcat(buffer, sfmt);
+	for (i = 0; i < GSV_MAX_SATELLITES_PER_MESSAGE && msg->info[i].id != 0; i++)
+	{
 		strcat(buffer, ",");
 
-		msglength += 7;
+		(void)navi_split_integer(msg->info[i].id, bytes, 2, 10);
+		msglength += navi_print_decfield(bytes, 2, id, sizeof(id));
+		strcat(buffer, id);
 
-		strcat(buffer, totalnm);
 		strcat(buffer, ",");
-		strcat(buffer, msgnm);
-		strcat(buffer, ",");
-		strcat(buffer, nmsatellites);
-
-		msglength += 2;
-		
-		nmoffullmsg = msg->nmsatellites % 4;
-		for (j = 0; j < nmoffullmsg; j++)
-		{
-			(void)navi_split_integer(msg->info[i * 4 + j].id, bytes, 2, 10);
-			msglength += navi_print_decfield(bytes, 2, id[j], sizeof(id[0]));
-
-			strcat(buffer, ",");
-			msglength += 1;
-			strcat(buffer, id[j]);
-
-			(void)navi_split_integer(msg->info[i * 4 + j].elevation, bytes, 2, 10);
-			msglength += navi_print_decfield(bytes,
-				msg->info[i * 4 + j].vfields & SATINFO_VALID_ORIENTATION ? 2 : 0,
-				elevation[j], sizeof(elevation[0]));
-
-			strcat(buffer, ",");
-			msglength += 1;
-			strcat(buffer, elevation[j]);
-
-			(void)navi_split_integer(msg->info[i * 4 + j].azimuth, bytes, 3, 10);
-			msglength += navi_print_decfield(bytes,
-				msg->info[i * 4 + j].vfields & SATINFO_VALID_ORIENTATION ? 3 : 0,
-				azimuth[j], sizeof(azimuth[0]));
-
-			strcat(buffer, ",");
-			msglength += 1;
-			strcat(buffer, azimuth[j]);
-
-			(void)navi_split_integer(msg->info[i * 4 + j].snr, bytes, 2, 10);
-			msglength += navi_print_decfield(bytes,
-				msg->info[i * 4 + j].vfields & SATINFO_VALID_SNR ? 2 : 0,
-				snr[j], sizeof(snr[0]));
-
-			strcat(buffer, ",");
-			msglength += 1;
-			strcat(buffer, snr[j]);
-		}
-
-		strcat(buffer, "*");
 		msglength += 1;
 
-		if (navi_checksum(buffer + total, msglength, csstr, NULL) != navi_Ok)
-			return navi_Error;
-		strcat(buffer, csstr);
-		strcat(buffer, "\r\n");
-		total = total + msglength + 4;
+		(void)navi_split_integer(msg->info[i].elevation, bytes, 2, 10);
+		msglength += navi_print_decfield(bytes,
+			msg->info[i].vfields & SATINFO_VALID_ORIENTATION ? 2 : 0,
+			elevation, sizeof(elevation));
+		strcat(buffer, elevation);
+
+		strcat(buffer, ",");
+		msglength += 1;
+
+		(void)navi_split_integer(msg->info[i].azimuth, bytes, 3, 10);
+		msglength += navi_print_decfield(bytes,
+			msg->info[i].vfields & SATINFO_VALID_ORIENTATION ? 3 : 0,
+			azimuth, sizeof(azimuth));
+		strcat(buffer, azimuth);
+
+		strcat(buffer, ",");
+		msglength += 1;
+
+		(void)navi_split_integer(msg->info[i].snr, bytes, 2, 10);
+		msglength += navi_print_decfield(bytes,
+			msg->info[i].vfields & SATINFO_VALID_SNR ? 2 : 0,
+			snr, sizeof(snr));
+		strcat(buffer, snr);
 	}
 
-	*nmwritten = total;
+	*nmwritten = msglength;
+	return navi_Ok;
+}
+
+//
+// Creates GSV message sequence from satellites array
+navierr_status_t navi_create_gsv_sequence(navi_talkerid_t tid, int nmofsatellites,
+	const struct navi_satinfo_t satlist[], char *buffer, size_t maxsize, size_t *nmwritten)
+{
+	int i, j;
+	int messagenm, totalmsgnm;
+	size_t offset = 0, nmofcharswritten = 0;
+
+	struct gsv_t gsv;
+
+	totalmsgnm = nmofsatellites / GSV_MAX_SATELLITES_PER_MESSAGE +
+		(nmofsatellites % GSV_MAX_SATELLITES_PER_MESSAGE ? 1 : 0);
+
+	j = 0;
+
+	for (messagenm = 1; messagenm <= totalmsgnm; messagenm++)
+	{
+		navi_init_gsv(&gsv, tid);
+		gsv.totalnm = totalmsgnm;
+		gsv.msgnm = messagenm;
+		gsv.nmsatellites = messagenm == 1 ? nmofsatellites : -1;
+
+		i = 0;
+		while (i < GSV_MAX_SATELLITES_PER_MESSAGE && j < nmofsatellites)
+		{
+			memmove(&gsv.info[i++], &satlist[j++], sizeof(gsv.info[0]));
+		}
+
+		if (navi_create_msg(navi_GSV, &gsv, buffer + offset, maxsize - offset, &nmofcharswritten) != navi_Ok)
+			return navi_Error;
+		offset += nmofcharswritten;
+	}
+
+	*nmwritten = offset;
 	return navi_Ok;
 }
 
@@ -220,7 +181,6 @@ navierr_status_t navi_parse_gsv(struct gsv_t *msg, char *buffer)
 		msg->msgnm = (int)round(d);
 	i += nmread;
 
-	msg->nmsatellites = 0;
 	if (navi_parse_decfield(buffer + i, 2, bytes, &nmread) != navi_Ok)
 	{
 		if (navierr_get_last()->errclass != navi_NullField)
@@ -232,7 +192,6 @@ navierr_status_t navi_parse_gsv(struct gsv_t *msg, char *buffer)
 	}
 	i += nmread;
 
-	msg->nmsatellites = 0;
 	for (j = 0; j < 4; j++)
 	{
 		msg->info[j].vfields = 0;
@@ -247,7 +206,6 @@ navierr_status_t navi_parse_gsv(struct gsv_t *msg, char *buffer)
 		else
 		{
 			msg->info[j].id = (int)round(d);
-			msg->nmsatellites += 1;
 		}
 		i += nmread;
 
