@@ -1,5 +1,10 @@
 2012-10-08  Igor Gorbunov  <igor.genius@gmail.com>
 
+	* GSV message restructured
+	* Generation of GSV message sequence
+
+2012-10-08  Igor Gorbunov  <igor.genius@gmail.com>
+
 	* MLA message restructured
 	* Generation of MLA message sequence
 
